// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`System Status Card Card matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <article
        class="pf-c-card pf-m-compact"
        style="padding: 1rem;"
      >
        <div
          class="pf-c-card__title"
        >
          <div
            class="pf-l-level"
          >
            <div>
              <h3
                class="pf-c-title pf-m-lg"
                style="font-weight: normal;"
              >
                System Status
                  
                <div />
              </h3>
            </div>
            <div />
          </div>
        </div>
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-grid"
          >
            <div
              class="pf-l-grid__item pf-m-2-col"
            >
              <div
                class="pf-l-flex"
              >
                <div
                  class=""
                >
                  <svg
                    aria-hidden="true"
                    fill="green"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                      transform=""
                    />
                  </svg>
                </div>
                <div
                  class=""
                >
                  <button
                    class="pf-c-button pf-m-link"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    data-testid="subsystem-item"
                    type="button"
                  >
                    Openshift
                  </button>
                </div>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-2-col"
            >
              <div
                class="pf-l-flex"
              >
                <div
                  class=""
                >
                  <svg
                    aria-hidden="true"
                    fill="green"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                      transform=""
                    />
                  </svg>
                </div>
                <div
                  class=""
                >
                  <button
                    class="pf-c-button pf-m-link"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    data-testid="subsystem-item"
                    type="button"
                  >
                    Openshift
                  </button>
                </div>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-2-col"
            >
              <div
                class="pf-l-flex"
              >
                <div
                  class=""
                >
                  <svg
                    aria-hidden="true"
                    fill="green"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                      transform=""
                    />
                  </svg>
                </div>
                <div
                  class=""
                >
                  <button
                    class="pf-c-button pf-m-link"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    data-testid="subsystem-item"
                    type="button"
                  >
                    Openshift
                  </button>
                </div>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-2-col"
            >
              <div
                class="pf-l-flex"
              >
                <div
                  class=""
                >
                  <svg
                    aria-hidden="true"
                    fill="green"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                      transform=""
                    />
                  </svg>
                </div>
                <div
                  class=""
                >
                  <button
                    class="pf-c-button pf-m-link"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    data-testid="subsystem-item"
                    type="button"
                  >
                    Openshift
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </article>
    </div>
    <div />
    <div />
    <div />
    <div />
    <div />
  </body>,
  "container": <div>
    <article
      class="pf-c-card pf-m-compact"
      style="padding: 1rem;"
    >
      <div
        class="pf-c-card__title"
      >
        <div
          class="pf-l-level"
        >
          <div>
            <h3
              class="pf-c-title pf-m-lg"
              style="font-weight: normal;"
            >
              System Status
                
              <div />
            </h3>
          </div>
          <div />
        </div>
      </div>
      <div
        class="pf-c-card__body"
      >
        <div
          class="pf-l-grid"
        >
          <div
            class="pf-l-grid__item pf-m-2-col"
          >
            <div
              class="pf-l-flex"
            >
              <div
                class=""
              >
                <svg
                  aria-hidden="true"
                  fill="green"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    transform=""
                  />
                </svg>
              </div>
              <div
                class=""
              >
                <button
                  class="pf-c-button pf-m-link"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  data-testid="subsystem-item"
                  type="button"
                >
                  Openshift
                </button>
              </div>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-2-col"
          >
            <div
              class="pf-l-flex"
            >
              <div
                class=""
              >
                <svg
                  aria-hidden="true"
                  fill="green"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    transform=""
                  />
                </svg>
              </div>
              <div
                class=""
              >
                <button
                  class="pf-c-button pf-m-link"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  data-testid="subsystem-item"
                  type="button"
                >
                  Openshift
                </button>
              </div>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-2-col"
          >
            <div
              class="pf-l-flex"
            >
              <div
                class=""
              >
                <svg
                  aria-hidden="true"
                  fill="green"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    transform=""
                  />
                </svg>
              </div>
              <div
                class=""
              >
                <button
                  class="pf-c-button pf-m-link"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  data-testid="subsystem-item"
                  type="button"
                >
                  Openshift
                </button>
              </div>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-2-col"
          >
            <div
              class="pf-l-flex"
            >
              <div
                class=""
              >
                <svg
                  aria-hidden="true"
                  fill="green"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    transform=""
                  />
                </svg>
              </div>
              <div
                class=""
              >
                <button
                  class="pf-c-button pf-m-link"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  data-testid="subsystem-item"
                  type="button"
                >
                  Openshift
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`System Status Card Details modal matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="pf-c-backdrop__open"
  >
    <div
      aria-hidden="true"
    />
    <div>
      <div
        class="pf-c-backdrop"
      >
        <div
          class="pf-l-bullseye"
        >
          <div
            aria-describedby="pf-modal-part-7"
            aria-labelledby="pf-modal-part-6"
            aria-modal="true"
            class="pf-c-modal-box pf-m-lg"
            id="pf-modal-part-5"
            role="dialog"
          >
            <button
              aria-label="Close"
              class="pf-c-button pf-m-plain"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  transform=""
                />
              </svg>
            </button>
            <header
              class="pf-c-modal-box__header"
            >
              <h1
                class="pf-c-modal-box__title"
                id="pf-modal-part-6"
              >
                Openshift Status
              </h1>
            </header>
            <div
              class="pf-c-modal-box__body"
              id="pf-modal-part-7"
            >
              <section
                class="pf-c-page__main-section"
              >
                <div
                  class="pf-l-grid"
                >
                  <div
                    class="pf-l-grid__item pf-m-8-col"
                  >
                    <div
                      class="pf-l-grid"
                    >
                      <div
                        class="pf-l-grid__item pf-m-12-col"
                      >
                        <span>
                          <strong>
                            Current Status:  
                          </strong>
                          <svg
                            aria-hidden="true"
                            fill="green"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                              transform=""
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="pf-l-grid__item pf-m-12-col"
                      >
                        <div>
                          <div>
                            <span>
                              <strong>
                                Info:  
                              </strong>
                              Deployment In Progress
                            </span>
                          </div>
                          <div>
                            <span>
                              <strong>
                                State:  
                              </strong>
                              provisioned
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="pf-l-grid__item pf-m-4-col"
                  >
                    <div
                      style="padding: 1rem 0px;"
                    >
                      <div
                        class="pf-c-content"
                      >
                        <div
                          style="padding: 0px 0px 0.5rem 0px;"
                        >
                          <h3
                            class="pf-c-title pf-m-lg"
                          >
                            Access Links
                          </h3>
                        </div>
                        <div>
                          <ul />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="pf-l-grid__item pf-m-12-col"
                  >
                    <div
                      style="padding: 1rem 0px;"
                    >
                      <div
                        class="pf-c-content"
                      >
                        <div
                          style="padding: 0px 0px 0.5rem 0px;"
                        >
                          <h3
                            class="pf-c-title pf-m-lg"
                          >
                            Messages
                          </h3>
                        </div>
                        <div>
                          <table
                            aria-label="System Messages"
                            class="pf-c-table pf-m-grid-md"
                            data-ouia-component-id="0"
                            data-ouia-component-type="PF4/Table"
                            data-ouia-safe="true"
                            role="grid"
                          >
                            <thead
                              class=""
                            >
                              <tr>
                                <th
                                  class=""
                                  data-key="0"
                                  data-label="Severity"
                                  scope="col"
                                >
                                  Severity
                                </th>
                                <th
                                  class=""
                                  data-key="1"
                                  data-label="Message"
                                  scope="col"
                                >
                                  Message
                                </th>
                                <th
                                  class=""
                                  data-key="2"
                                  data-label="Timestamp"
                                  scope="col"
                                >
                                  Timestamp
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class=""
                            >
                              <tr
                                class=""
                                data-ouia-component-id="1"
                                data-ouia-component-type="PF4/TableRow"
                                data-ouia-safe="true"
                              >
                                <td
                                  class=""
                                  data-key="0"
                                  data-label="Severity"
                                >
                                  Info
                                </td>
                                <td
                                  class=""
                                  data-key="1"
                                  data-label="Message"
                                >
                                  System Message
                                </td>
                                <td
                                  class=""
                                  data-key="2"
                                  data-label="Timestamp"
                                >
                                  2020-02-01T00:00:00-05:00
                                </td>
                              </tr>
                              <tr
                                class=""
                                data-ouia-component-id="2"
                                data-ouia-component-type="PF4/TableRow"
                                data-ouia-safe="true"
                              >
                                <td
                                  class=""
                                  data-key="0"
                                  data-label="Severity"
                                >
                                  Info
                                </td>
                                <td
                                  class=""
                                  data-key="1"
                                  data-label="Message"
                                >
                                  System Message
                                </td>
                                <td
                                  class=""
                                  data-key="2"
                                  data-label="Timestamp"
                                >
                                  2020-02-01T00:00:00-05:00
                                </td>
                              </tr>
                              <tr
                                class=""
                                data-ouia-component-id="3"
                                data-ouia-component-type="PF4/TableRow"
                                data-ouia-safe="true"
                              >
                                <td
                                  class=""
                                  data-key="0"
                                  data-label="Severity"
                                >
                                  Info
                                </td>
                                <td
                                  class=""
                                  data-key="1"
                                  data-label="Message"
                                >
                                  System Message
                                </td>
                                <td
                                  class=""
                                  data-key="2"
                                  data-label="Timestamp"
                                >
                                  2020-02-01T00:00:00-05:00
                                </td>
                              </tr>
                              <tr
                                class=""
                                data-ouia-component-id="4"
                                data-ouia-component-type="PF4/TableRow"
                                data-ouia-safe="true"
                              >
                                <td
                                  class=""
                                  data-key="0"
                                  data-label="Severity"
                                >
                                  Info
                                </td>
                                <td
                                  class=""
                                  data-key="1"
                                  data-label="Message"
                                >
                                  System Message
                                </td>
                                <td
                                  class=""
                                  data-key="2"
                                  data-label="Timestamp"
                                >
                                  2020-02-01T00:00:00-05:00
                                </td>
                              </tr>
                              <tr
                                class=""
                                data-ouia-component-id="5"
                                data-ouia-component-type="PF4/TableRow"
                                data-ouia-safe="true"
                              >
                                <td
                                  class=""
                                  data-key="0"
                                  data-label="Severity"
                                >
                                  Info
                                </td>
                                <td
                                  class=""
                                  data-key="1"
                                  data-label="Message"
                                >
                                  System Message
                                </td>
                                <td
                                  class=""
                                  data-key="2"
                                  data-label="Timestamp"
                                >
                                  2020-02-01T00:00:00-05:00
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
              <section
                class="pf-c-page__main-section"
              >
                <div
                  style="margin-top: 1rem;"
                >
                  <div
                    class="pf-l-flex pf-m-justify-content-flex-end"
                  >
                    <div
                      class=""
                    >
                      <div>
                        <button
                          class="pf-c-button pf-m-primary"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          type="button"
                        >
                          Close
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`System Status Card Status icons match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class=""
  >
    <div>
      <svg
        aria-hidden="true"
        fill="green"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          transform=""
        />
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg
      aria-hidden="true"
      fill="green"
      height="1em"
      role="img"
      style="vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
    >
      <path
        d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
        transform=""
      />
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`System Status Card Status icons match snapshot 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class=""
  >
    <div>
      <svg
        aria-hidden="true"
        fill="green"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          transform=""
        />
      </svg>
    </div>
    <div>
      <svg
        aria-hidden="true"
        fill="#EC7A08"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 576 512"
        width="1em"
      >
        <path
          d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          transform=""
        />
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg
      aria-hidden="true"
      fill="#EC7A08"
      height="1em"
      role="img"
      style="vertical-align: -0.125em;"
      viewBox="0 0 576 512"
      width="1em"
    >
      <path
        d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
        transform=""
      />
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`System Status Card Status icons match snapshot 3`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class=""
  >
    <div>
      <svg
        aria-hidden="true"
        fill="green"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          transform=""
        />
      </svg>
    </div>
    <div>
      <svg
        aria-hidden="true"
        fill="#EC7A08"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 576 512"
        width="1em"
      >
        <path
          d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          transform=""
        />
      </svg>
    </div>
    <div>
      <svg
        aria-hidden="true"
        fill="#C9190B"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          transform=""
        />
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg
      aria-hidden="true"
      fill="#C9190B"
      height="1em"
      role="img"
      style="vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
        transform=""
      />
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`System Status Card Subsystem details matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class=""
  >
    <div>
      <div
        class="pf-l-flex"
      >
        <div
          class=""
        >
          <svg
            aria-hidden="true"
            fill="green"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
              transform=""
            />
          </svg>
        </div>
        <div
          class=""
        >
          <button
            class="pf-c-button pf-m-link"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            data-testid="subsystem-item"
            type="button"
          >
            Openshift
          </button>
        </div>
      </div>
    </div>
    <div />
  </body>,
  "container": <div>
    <div
      class="pf-l-flex"
    >
      <div
        class=""
      >
        <svg
          aria-hidden="true"
          fill="green"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            transform=""
          />
        </svg>
      </div>
      <div
        class=""
      >
        <button
          class="pf-c-button pf-m-link"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          data-testid="subsystem-item"
          type="button"
        >
          Openshift
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`System Status Card System status details modal matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="pf-c-backdrop__open"
  >
    <div
      aria-hidden="true"
    />
    <div>
      <div
        class="pf-c-backdrop"
      >
        <div
          class="pf-l-bullseye"
        >
          <div
            aria-describedby="pf-modal-part-9"
            aria-labelledby="pf-modal-part-8"
            aria-modal="true"
            class="pf-c-modal-box pf-m-lg"
            id="pf-modal-part-7"
            role="dialog"
          >
            <button
              aria-label="Close"
              class="pf-c-button pf-m-plain"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  transform=""
                />
              </svg>
            </button>
            <header
              class="pf-c-modal-box__header"
            >
              <h1
                class="pf-c-modal-box__title"
                id="pf-modal-part-8"
              >
                System Status messages
              </h1>
            </header>
            <div
              class="pf-c-modal-box__body"
              id="pf-modal-part-9"
            >
              <section
                class="pf-c-page__main-section"
              >
                <div
                  class="pf-l-grid"
                >
                  <div
                    class="pf-l-grid__item pf-m-12-col"
                  >
                    <ul
                      aria-label="system status message"
                      class="pf-c-data-list pf-m-compact"
                    >
                      <li
                        aria-labelledby="system-status-messages"
                        class="pf-c-data-list__item"
                        id=""
                      >
                        <div
                          class="pf-c-data-list__item-row"
                        >
                          <div
                            class="pf-c-data-list__item-content"
                          >
                            <div
                              class="pf-c-data-list__cell"
                            >
                              <b>
                                 Severity: 
                              </b>
                              info
                            </div>
                            <div
                              class="pf-c-data-list__cell pf-m-flex-4"
                            >
                              <b>
                                 Message: 
                              </b>
                              <span>
                                 
                                System Message
                                 
                              </span>
                            </div>
                            <div
                              class="pf-c-data-list__cell pf-m-flex-2"
                            >
                              <b>
                                 Updated: 
                              </b>
                              <span>
                                2020-02-01T00:00:00-05:00
                              </span>
                            </div>
                          </div>
                        </div>
                      </li>
                    </ul>
                  </div>
                  <div
                    class="pf-l-grid__item pf-m-12-col"
                  >
                    <ul
                      aria-label="system status message"
                      class="pf-c-data-list pf-m-compact"
                    >
                      <li
                        aria-labelledby="system-status-messages"
                        class="pf-c-data-list__item"
                        id=""
                      >
                        <div
                          class="pf-c-data-list__item-row"
                        >
                          <div
                            class="pf-c-data-list__item-content"
                          >
                            <div
                              class="pf-c-data-list__cell"
                            >
                              <b>
                                 Severity: 
                              </b>
                              info
                            </div>
                            <div
                              class="pf-c-data-list__cell pf-m-flex-4"
                            >
                              <b>
                                 Message: 
                              </b>
                              <span>
                                 
                                System Message
                                 
                              </span>
                            </div>
                            <div
                              class="pf-c-data-list__cell pf-m-flex-2"
                            >
                              <b>
                                 Updated: 
                              </b>
                              <span>
                                2020-02-01T00:00:00-05:00
                              </span>
                            </div>
                          </div>
                        </div>
                      </li>
                    </ul>
                  </div>
                  <div
                    class="pf-l-grid__item pf-m-12-col"
                  >
                    <ul
                      aria-label="system status message"
                      class="pf-c-data-list pf-m-compact"
                    >
                      <li
                        aria-labelledby="system-status-messages"
                        class="pf-c-data-list__item"
                        id=""
                      >
                        <div
                          class="pf-c-data-list__item-row"
                        >
                          <div
                            class="pf-c-data-list__item-content"
                          >
                            <div
                              class="pf-c-data-list__cell"
                            >
                              <b>
                                 Severity: 
                              </b>
                              info
                            </div>
                            <div
                              class="pf-c-data-list__cell pf-m-flex-4"
                            >
                              <b>
                                 Message: 
                              </b>
                              <span>
                                 
                                System Message
                                 
                              </span>
                            </div>
                            <div
                              class="pf-c-data-list__cell pf-m-flex-2"
                            >
                              <b>
                                 Updated: 
                              </b>
                              <span>
                                2020-02-01T00:00:00-05:00
                              </span>
                            </div>
                          </div>
                        </div>
                      </li>
                    </ul>
                  </div>
                  <div
                    class="pf-l-grid__item pf-m-12-col"
                  >
                    <ul
                      aria-label="system status message"
                      class="pf-c-data-list pf-m-compact"
                    >
                      <li
                        aria-labelledby="system-status-messages"
                        class="pf-c-data-list__item"
                        id=""
                      >
                        <div
                          class="pf-c-data-list__item-row"
                        >
                          <div
                            class="pf-c-data-list__item-content"
                          >
                            <div
                              class="pf-c-data-list__cell"
                            >
                              <b>
                                 Severity: 
                              </b>
                              info
                            </div>
                            <div
                              class="pf-c-data-list__cell pf-m-flex-4"
                            >
                              <b>
                                 Message: 
                              </b>
                              <span>
                                 
                                System Message
                                 
                              </span>
                            </div>
                            <div
                              class="pf-c-data-list__cell pf-m-flex-2"
                            >
                              <b>
                                 Updated: 
                              </b>
                              <span>
                                2020-02-01T00:00:00-05:00
                              </span>
                            </div>
                          </div>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </section>
              <section
                class="pf-c-page__main-section"
              >
                <div
                  style="margin-top: 1rem;"
                >
                  <div
                    class="pf-l-flex pf-m-justify-content-flex-end"
                  >
                    <div
                      class=""
                    >
                      <div>
                        <button
                          class="pf-c-button pf-m-primary"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          type="button"
                        >
                          Close
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
